@@ -176,6 +176,10 @@ Bug Fixes
 * SOLR-4504: Fixed CurrencyField range queries to correctly exclude 
   documents w/o values (hossman)
 
+* SOLR-4480: A trailing + or - caused the edismax parser to throw
+  an exception.  (Fiona Tay, Jan Høydahl, yonik)
+
+
 Optimizations
 ----------------------
 
